--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.1",
+        "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.10.1",
+        "stripe/stripe-php": "^17.2",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
